[dependencies.curve25519-dalek]
default-features = false
version = "3.0"
features = ["u64_backend", "nightly", "serde", "alloc"]

[dependencies]
rand = "0.7"
polynomials = "0.2"

[dependencies.blake2]
default-features = false
version = "0.9"

[dependencies.merlin]
default-features = false
version = "2"

[dependencies.serde]
default-features = false
version = "1.0"
features = ["derive"]
optional = true

[dependencies.itertools]
default-features = false
version = "0.10.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "prove_and_verify"
harness = false

[package]
name = "arcturus"
version = "0.2.1"
authors = ["cargodog <cargodog@protonmail.com>"]
edition = "2018"
description = "Implementation of Arcturus zero-knowledge proofs for confidential transactions."
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/cargodog/arcturus"
keywords = ["cryptography", "crypto", "zero-knowledge", "zk", "no-std"]
categories = ["cryptography", "no-std"]
exclude = ["**/.gitignore", ".gitignore"]
